archive all sub-tasks when parent task is archived